Update NeuralNet.java